--- a/lumen/public/client/package.json
+++ b/lumen/public/client/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/tutturen/valgorama#readme",
   "dependencies": {
+    "axios": "^0.7.0",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "classnames": "^2.2.0",
     "jsx": "^0.9.89",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
